--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=Valor per defecte (activat)
 default-value-x=Valor per defecte ({0})
 default-values=Valors per defecte
 default-view=Vista per defecte
-default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
 default-viewport=Finestra gràfica per defecte
 default-was-changed=S'ha canviat el valor per defecte
 default-workflow-for-all-document-types=Flux de treball per defecte per a tots els tipus de documents
