--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=Default Value (Enabled)
 default-value-x=Default Value ({0})
 default-values=Default Values
 default-view=Default View
-default-view-must-be-at-least-one-column=Default view must be at least one column.
+default-view-must-have-at-least-one-column=Default view must have at least one column.
 default-viewport=Default Viewport
 default-was-changed=Default Was Changed
 default-workflow-for-all-document-types=Default Workflow for all Document Types
