--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=Oletusarvo (Käytössä)
 default-value-x=Vakio-arvo ({0})
 default-values=Oletusarvot
 default-view=Oletus näkymä
-default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
 default-viewport=Oletusnäyttöikkuna
 default-was-changed=Oletus muutettiin
 default-workflow-for-all-document-types=Oletus työnkulku kaikille asiakirjatyypeille
