--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=Alapérték (engedélyezve)
 default-value-x=Alapérték ({0})
 default-values=Alapértelmezett értékek
 default-view=Alapértelmezett nézet
-default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
 default-viewport=Alapértelmezett nézőpont
 default-was-changed=Az alapértelmezés megváltozott
 default-workflow-for-all-document-types=Alapértelmezett munkafolyamat minden dokumentumtípusra
