--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=デフォルト値（有効）
 default-value-x=デフォルト値 ({0})
 default-values=デフォルト値
 default-view=デフォルトビュー
-default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
 default-viewport=デフォルトのビューポート
 default-was-changed=デフォルトが変更されました
 default-workflow-for-all-document-types=すべてのドキュメントタイプ用デフォルトワークフロー
