--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=Standaardwaarde (ingeschakeld)
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=Standaard waarden
 default-view=Default View (Automatic Copy)
-default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Standaardwerkstroom voor alle documenttypes
