--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=Wartość domyślna (Odblokowane)
 default-value-x=Domyślna Wartość ({0})
 default-values=Wartości domyślne
 default-view=Domyślny widok
-default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Domyślny przepływ zadań dla wszystkich typów dokumentów
