--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=Valor Padrão (Ativado)
 default-value-x=Valor Padrão ({0})
 default-values=Valores padrão
 default-view=Visualização padrão
-default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
 default-viewport=Visor padrão
 default-was-changed=Padrão alterado
 default-workflow-for-all-document-types=Fluxo de trabalho padrão para todos os tipos de documentos
