--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=Valor por Omissão (Ativado)
 default-value-x=Valor por Omissão ({0})
 default-values=Valores por Omissão
 default-view=Vista por Omissão
-default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Fluxo de trabalho por omissão para todos os tipos de documentos
