--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=Standardvärde (aktiverat)
 default-value-x=Standardvärde ({0})
 default-values=Standardvärden
 default-view=Standardvy
-default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
 default-viewport=Standardvisningsområde
 default-was-changed=Standard har ändrats
 default-workflow-for-all-document-types=Standard arbetsflöde för samtliga dokumenttyper
