--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=Стойност по подразбиране (разре
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=Стойности по подразбиране
 default-view=Изглед по подразбиране (Automatic Translation)
-default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Работен поток по подразбиране за всички типове документи (Automatic Translation)
