--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=Default Value (Enabled) (Automatic Copy)
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=Valores por defecto
 default-view=Vista predeterminada
-default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Fluxo de traballo predeterminado para todos os tipos de documentos
