--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hr.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=Predodređena vrijednost (Omogućeno)
 default-value-x=Zadana vrijednost ({0})
 default-values=Zadane vrijednosti
 default-view=Default View (Automatic Copy)
-default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Predzadani tjek posla za sve tipove dokumenata
