--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=Standardverdi (Aktivert)
 default-value-x=Standardverdi ({0})
 default-values=Standardverdier
 default-view=Standardvisning
-default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Standard arbeidsflyt for alle dokumenttyper
