--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=Standaardwaarde (ingeschakeld)
 default-value-x=Standaardwaarde ({0})
 default-values=Standaardwaarden
 default-view=Standaardweergave
-default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
 default-viewport=Standaard viewport
 default-was-changed=Standaardwaarde gewijzigd
 default-workflow-for-all-document-types=Standaardwerkstroom voor alle documenttypes
