--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -4626,7 +4626,7 @@ default-value-enabled=Varsayılan Değer (Etkin) (Automatic Translation)
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=Varsayılan Değerler
 default-view=Varsayılan Görünüm (Automatic Translation)
-default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
+default-view-must-have-at-least-one-column=Default view must have at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Tüm Belge Türleri için Varsayılan İş Akışı (Automatic Translation)
